--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,11 +8,13 @@ branches:
 
 build: off  # будем использовать свой скрипт сборки
 
+before_install:
+  - chmod +x gradlew
+
 install:
     # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
   - java -jar ./artifacts/app-mbank.jar &
   - chmod +x gradlew
 
 build_script:
-  - chmod +x gradlew
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
